--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
               {% endif %} 
 
               {% if page.title != "Project Repositories" %}
-                 <li><a href="{{ 'repos' | absolute_url }}"><i class="fa fa-code-fork"></i>&nbsp;&nbsp;&nbsp;&nbsp;Repositories</a></li>    
+                 <li><a href="{{ 'repos' | absolute_url }}"><i class="fa fa-code-fork"></i>&nbsp;&nbsp;&nbsp;&nbsp;Projects</a></li>
               {% else %}
                 <li><b><i class="fa fa-code-fork"></i>&nbsp;&nbsp;&nbsp;&nbsp;Repositories</b></li>  
               {% endif %} 
