--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
               <div class="overlay-inside" >
                 <center>
                           <hr class="banner-line">
-                      <p class="banner-head">SOUMYADEEP DAS</p>
+                      <p class="banner-head">Alex Carvalho</p>
                           <hr class="banner-line">
                           <br>
                       <p class="banner-body">ASTROPHYSICS. AGN.<br>INTERFEROMETRY.</p>
